fixed vertical scrollbar appearing on main page when you open dialog

--- a/public/stylesheets/less/rp-content.less
+++ b/public/stylesheets/less/rp-content.less
@@ -1,6 +1,10 @@
 /*
 	CONTENT AND COLUMNS
  */
+html {
+    overflow-y: hidden;
+}
+
 .rp-main {
     background-color: @rp-background-content;
     z-index: 0;
